# midasVESDemo

./: .gitignore  README.md
App-example/: .project  AndroidManifest.xml
App-example/res/layout/: activity_list_of_views.xml  activity_main.xml  activity_simplerow.xml  single_list_item_view.xml
App-example/res/values/: strings.xml
App-example/res/values-fr/: strings.xml
App-example/res/values-v11/: styles.xml
App-example/src/com/app_example/: Community.java  DisplayMessageActivity.java  DownloadFileActivity.java  FileExplorerActivity.java  Folder.java  HttpThread.java  ListOfViewsActivity.java  LoopListActivity.java  MainActivity.java  SingleListItemActivity.java
CeliaPansard/: .project  AndroidManifest.xml
CeliaPansard/res/layout/: activity_list_of_views.xml  activity_open_file.xml  activity_web_view.xml  homepage.xml  single_list_item_view.xml
CeliaPansard/res/values/: strings.xml
CeliaPansard/src/com/celiapansard/: ChooseFirstAction.java  Community.java  DownloadFileActivity.java  FileExplorerActivity.java  Folder.java  HttpThread.java  ListOfViewsActivity.java  OpenFIleActivity.java  SingleListItemActivity.java
Midas3DVisualisation/Apps/Android/MidasFilesVisualisation/: .project  CMakeCache.txt  CMakeLists.txt  Makefile  build.xml  cmake_install.cmake  configure_ant.sh  run.sh  show_log.sh
Midas3DVisualisation/Apps/Android/MidasFilesVisualisation/jni/: CMakeLists.txt  CMakeLists.txt~  KiwiNative.cpp  Makefile  MidasNative.cpp  cmake_install.cmake
Midas3DVisualisation/Docs/Doxygen/: Doxyfile.in  Doxyfile.in~
Midas3DVisualisation/src/: CMakeLists.txt  CMakeLists.txt~  setup-headers.cmake  setup-headers.cmake~
Midas3DVisualisation/src/kiwi/: CMakeLists.txt  vesKiwiBaseApp.cpp  vesKiwiViewerApp.cpp  vesKiwiViewerApp.h
Midas3DVisualisation/src/kiwi/Testing/: CMakeLists.txt  TestTexture.cpp
Midas3DVisualisation/src/midas/: CMakeLists.txt  headers.cmake  vesMidasApp.cpp  vesMidasApp.h
Midas3DVisualisation/src/shaders/: Makefile  cmake_install.cmake  vesBackgroundTexture_vert.cpp  vesBackgroundTexture_vert.h  vesBlinnPhong_frag.cpp  vesBlinnPhong_vert.cpp  vesBlinnPhong_vert.h  vesCap_frag.cpp  vesCap_vert.h  vesClipPlane_frag.cpp  vesClipPlane_frag.h  vesClipPlane_vert.cpp  vesGouraudTexture_frag.cpp  vesGouraudTexture_vert.h  vesShader_frag.h  vesShader_vert.h  vesToonShader_frag.h  vesToonShader_vert.cpp
Midas3DVisualisation/src/ves/: Makefile  cmake_install.cmake
MidasProject/Apps/Android/Kiwi/: .project  AndroidManifest.xml  CMakeCache.txt  Makefile  assets.cmake  build.xml  cmake_install.cmake  local.properties  run.sh  show_log.sh  tools.sh  tools.sh~
MidasProject/Apps/Android/Kiwi/assets/: VPL_thalamic_nucleus_R.vtp  VPM_thalamic_nucleus_L.vtp  VPM_thalamic_nucleus_R.vtp  angular_gyrus_inferior_parietal_lobule_L.vtp  angular_gyrus_inferior_parietal_lobule_R.vtp  anterior_commissure.vtp  anterior_substantia_perforata_L.vtp  anterior_thalamic_nucleus_L.vtp  atlas.vtp  can0005.vtp  can0006.vtp  can0007.vtp  can0009.vtp  can0013.vtp  can0018.vtp  can0021.vtp  can0022.vtp  can0023.vtp  can0024.vtp  can0026.vtp  can0028.vtp  can0029.vtp  (+50 more)
MidasProject/Apps/Android/Kiwi/jni/: CMakeLists.txt  KiwiNative.cpp  Makefile  MidasNative.cpp  MidasToolsNative.cpp  cmake_install.cmake
MidasProject/CMake/: makeFramework.sh  ves-superbuild.cmake
MidasProject/CMake/toolchains/: curl-TryRunResults.cmake
MidasProject/src/: CMakeLists.txt  setup-headers.cmake
MidasProject/src/kiwi/: CMakeLists.txt  headers.cmake  vesKiwiArchiveUtils.cpp  vesKiwiCurlDownloader.cpp  vesKiwiDataLoader.cpp  vesKiwiImagePlaneDataRepresentation.cpp  vesKiwiImagePlaneDataRepresentation.h  vesKiwiImageWidgetRepresentation.cpp  vesKiwiPVRemoteRepresentation.cpp  vesKiwiPVRemoteRepresentation.h  vesKiwiPolyDataRepresentation.cpp  vesKiwiPolyDataRepresentation.h  vesKiwiTestHelper.h  vesKiwiViewerApp.cpp  vesKiwiViewerApp.h  vesMidasClient.cpp  vesMidasClient.h  vesPVWebClient.cpp  vesPVWebClient.h  vesPVWebDataSet.cpp  vesPVWebDataSet.h
MidasProject/src/kiwi/Testing/: CMakeLists.txt  TestCap.cpp  TestKiwiImage.cpp  TestKiwiViewer.cpp  TestPVWeb.cpp  TestStreamingDataRepresentation.cpp
MidasProject/src/midas/: CMakeLists.txt  CProgressDialog.cpp  CProgressDialog.h  MidasResource.cpp  MidasResource.h  MyProgressDelegate.cpp  MyProgressDelegate.h  headers.cmake  midasFilesTools.cpp  midasFilesTools.cpp.autosave  midasFilesTools.h  midasResource.cpp  midasResource.h  vesMidasApp.cpp  vesMidasApp.h  vesMidasVersion.h.in
MidasProject/src/ves/: headers.cmake  vesTestHelper.h
(+215 files in other folders)
